@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Mon Dec 19 16:58:47 CET 2005
+// Thu Dec 22 17:41:27 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -216,6 +216,11 @@ namespace Mono.Cecil.Binary {
 			sect.NumberOfRelocations = m_binaryReader.ReadUInt16 ();
 			sect.NumberOfLineNumbers = m_binaryReader.ReadUInt16 ();
 			sect.Characteristics = (Mono.Cecil.Binary.SectionCharacteristics) m_binaryReader.ReadUInt32 ();
+
+			long pos = m_binaryReader.BaseStream.Position;
+			m_binaryReader.BaseStream.Position = sect.PointerToRawData;
+			sect.Data = m_binaryReader.ReadBytes ((int) sect.SizeOfRawData);
+			m_binaryReader.BaseStream.Position = pos;
 		}
 
 		public override void VisitImportAddressTable (ImportAddressTable iat)
