@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 22:11:54 CEST 2005
+// Thu Dec 22 17:41:27 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -49,6 +49,7 @@ namespace Mono.Cecil.Binary {
 		public SectionCharacteristics Characteristics;
 
 		public string Name;
+		public byte [] Data;
 
 		internal Section ()
 		{
