@@ -42,9 +42,6 @@ namespace Mono.Cecil.Metadata {
 		MetadataTableReader m_tableReader;
 		MetadataRoot m_root;
 
-		BinaryReader m_dataReader;
-		RVA m_baseOfCodeOrRes = new RVA (0x2050);
-
 		public MetadataTableReader TableReader {
 			get { return m_tableReader; }
 		}
@@ -62,8 +59,7 @@ namespace Mono.Cecil.Metadata {
 
 		public BinaryReader GetDataReader (RVA rva)
 		{
-			m_dataReader.BaseStream.Position = rva - m_baseOfCodeOrRes;
-			return m_dataReader;
+			return m_ir.Image.GetReaderAtVirtualAddress (rva);
 		}
 
 		public override void VisitMetadataRoot (MetadataRoot root)
@@ -71,15 +67,6 @@ namespace Mono.Cecil.Metadata {
 			m_root = root;
 			root.Header = new MetadataRoot.MetadataRootHeader ();
 			root.Streams = new MetadataStreamCollection ();
-
-			long pos = m_binaryReader.BaseStream.Position;
-			m_binaryReader.BaseStream.Position = m_ir.Image.ResolveTextVirtualAddress (m_baseOfCodeOrRes);
-			byte [] data = m_binaryReader.ReadBytes (
-				(int) (m_binaryReader.BaseStream.Length - m_binaryReader.BaseStream.Position));
-
-			m_dataReader = new BinaryReader (new MemoryStream (data));
-
-			m_binaryReader.BaseStream.Position = pos;
 		}
 
 		public override void VisitMetadataRootHeader (MetadataRoot.MetadataRootHeader header)
